Added many html lines of code

--- a/index.html
+++ b/index.html
@@ -2,9 +2,106 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Insert Your Title Here</title>
+		<title>World Surf | A World of Waves at your Fingertips</title>
 	</head>
 	<body>
-		<p>Replace</p>
+		<header>
+			<div class="logo"><img src="images/logo.png"></div>
+			<nav>
+				<ul>
+					<li>Home</li>
+					<li>Features</li>
+					<li>Plans</li>
+					<li>Sign Up</li>
+					<li>Login</li>
+				</ul>
+			</nav>
+		</header>
+		<section id="slogan">
+			<h1>A World of Waves at Your Fingertips</h1>
+			<h2 class="subtTitle">See the outer reefs of Bali. Save Morocco’s “Money Wave”. Surf Tavarua from your own virtual seat at “Restaurants”. Explore a world of surf… from anywhere in the world.</h2>
+		</section>
+		<section id="main-cta">
+			<div id="sliderText" class="left">
+				<h2>Teahupoo, Tahiti</h2>
+				 <p>There can be only one "world's heaviest wave", and that title rests soundly with the wave at Teahupo'o (pronounced Cho-poo). Along the southern end of the smaller of Tahiti's two extinct volcanoes, Tahiti Iti, the tiny town of Teahupo'o is where the pavement stops. Surfers have sampled the South Pacific island since the early 1960s, but prior to the mid-'80s, surfers had no reason to venture that far, especially considering the wealth of hollow reefbreaks encircling the rest of the island.</p>
+				 <a href="#">Read More</a>
+			</div>
+			<div id="ctaBox" class="right">
+			<h2>Become a Member</h2>
+			<p>Worldsurf.com provides its members with access to premium "members only" content and features like:</p>
+			<ul>
+				<li><img src="images/webcam.png"><h3>Surfing Webcams</h3></li>
+				<li><img src="images/bubble.png"><h3>Tips & Tricks</h3></li>
+				<li><img src="images/book.png"><h3>Surfer Bookmarking</h3></li>
+				<li><img src="images/glasses.png"><h3>And Much More!</h3></li>
+			</ul>
+			<button>Sign Up Now</button>
+			</div>
+		</section>
+		<section id="main-columns">
+			<div class="one-third">
+				<img src="images/webcam-2.png"><h2>World Surf Cams</h2>
+				<p>See what the conditions are like 24 hours a day 7 days a week with our
+destination cams. Exclusive to worldsurf.com members.</p>
+				<button>Read More</button>
+			</div>
+			<div class="one-third">
+				<img src="images/talk-2.png"><h2>Tips & Tricks</h2>
+				<p>Get advice from other surfers that have “been-there-done-that” to make your
+next surf trip the best it can be.</p>
+				<button>Read More</button>
+			</div>
+			<div class="one-third">
+				<img src="images/book-2.png"><h2>Surf Saver</h2>
+				<p>Save and revisit your favorite surf destinations to make the decision of where to go next, easier.</p>
+				<button>Read More</button>
+			</div>
+		</section>
+		<footer>
+		<section id="footer-widgets">
+			<div class="one-third">
+				<ul class="gallery">
+					<li><img src="images/image1.jpg"></li>
+					<li><img src="images/image2.jpg"></li>
+					<li><img src="images/image3.jpg"></li>
+					<li><img src="images/image4.jpg"></li>
+				</ul>
+			</div>
+			<div class="one-third">
+				<article>
+					<h2>Latest Blog Article</h2>
+					<h3>Traveling to Hawaii</h3>
+					<p>We traveled to <strong>Hawaii</strong> and met up with pro surfer, <strong>Kelly Slater</strong> to talk about the various types of boards he has used...</p> <a href="#">Read More</a>
+				</article>
+			</div>
+			<div class="one-third">
+				<aside>
+					<h2>Follow Us</h2>
+						<ul>
+							<li><a href="#">Facebook</a></li>
+							<li><a href="#">Twitter</a></li>
+							<li><a href="#">LinkedIn</a></li>
+						</ul>
+			</aside>
+			</div>
+		</section>
+			<section id="socket">
+				<div class="left">
+					<p>© 2013 World Surf | All Rights Reserved</p>
+				</div>
+				<div class="right">
+					<nav>
+						<ul>
+							<li>Home</li>
+							<li>Features</li>
+							<li>Plans</li>
+							<li>Sign Up</li>
+							<li>Login</li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+		</footer>
 	</body>
 </html>
