Added Responsive Code
Media Queries, etc.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>World Surf | A World of Waves at your Fingertips</title>
 		
 
@@ -10,18 +11,19 @@
 		
 		<link rel="stylesheet" href="css/style.css">
 		
+	
 	</head>
 	<body>
 		<header>
 			<div class="container">
 				<div class="logo"><img src="images/logo.png"></div>
 				<nav>
-					<ul>
-						<li><a class="current radius" href="#">Home</a></li>
-						<li><a class="radius" href="#">Features</a></li>
-						<li><a class="radius" href="#">Plans</a></li>
-						<li><a class="radius" href="#">Sign Up</a></li>
-						<li><a class="radius" href="#">Login</a></li>
+								<ul>
+						<li><a class="current" href="#">Home</a></li>
+						<li><a href="#">Features</a></li>
+						<li><a href="#">Plans</a></li>
+						<li><a href="#">Sign Up</a></li>
+						<li><a href="#">Login</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -124,20 +126,20 @@
 			<div class="clearfix"></div>
 			<section id="socket">
 				<div class="container">
-					<div class="left">
-						<p>© 2013 World Surf | All Rights Reserved</p>
-					</div>
-					<div class="right">
-						<nav>
-							<ul>
-								<li><a class="current radius" href="#">Home</a> | </li>
-								<li><a class="radius" href="#">Features</a> | </li>
-								<li><a class="radius" href="#">Plans</a> | </li>
-								<li><a class="radius" href="#">Sign Up</a> | </li>
-								<li><a class="radius" href="#">Login</a></li>
-							</ul>
-						</nav>
-					</div>
+					<div class="footerMenu">
+							<nav>
+								<ul>
+									<li><a class="current radius" href="#">Home</a> | </li>
+									<li><a class="radius" href="#">Features</a> | </li>
+									<li><a class="radius" href="#">Plans</a> | </li>
+									<li><a class="radius" href="#">Sign Up</a> | </li>
+									<li><a class="radius" href="#">Login</a></li>
+								</ul>
+							</nav>
+						</div>
+						<div class="copyright">
+							<p>© 2013 World Surf | All Rights Reserved</p>
+						</div>
 				</div>
 			</section>
 		</footer>
